--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="formulario.css" media="screen">
     <title>Formulario</title>
+    
 </head>
-<body background="img/fundo riverox siite (2).png">
+<body class="corpo">
 
     <div>
- <h1 id="titulo">Cadastro</h1> 
- <p id="subtitulo">Coloque suas informações abaixo</p>
+ <h1 id="titulo">&nbsp Cadastro</h1> 
+ <p id="subtitulo"> &nbsp &nbsp &nbsp &nbsp  Coloque suas informações abaixo</p>
   <br>
     </div>
 
@@ -19,7 +20,7 @@
         <fieldset class="grupo">
             <div>
                 <label for="nome"><strong>Nome:</strong></label> 
-            <Br>
+            <br>
                 <input type="text"name="nome" id="nome">
             </div> 
             <br>
@@ -38,7 +39,7 @@
         <fieldset>
         <div id="check">
             <label for="estado"><strong>Em que estado você mora?</strong></label>
-                <option selected disabled value="">Selecione</option>
+                <option selected disabled value=""></option>
                 <select id="estado">
                     <option selected disabled value="">Selecione</option>
                 <option>Acre (AC)</option> 
@@ -70,7 +71,7 @@
  <option>Tocantins (TO)</option>
             </select>
             <br> 
-
+<br>
         </div>
     </fieldset>
 
@@ -85,15 +86,15 @@
                 <table for="preferencia3">Livros</table>
             </div>
         </fieldset>
-
+<br>
         <div class="campo">
             <label><strong>Conte um pouco sobre você<strong</label>
             <textarea  rows="6"   style="width: 16em;" id="you" name="you"></textarea> 
         </div>
-        
-        <div> 
+        <br><br><br><br><br><br><br>
+        <footer> 
             <button class="botao" type="submit">Concluído</button>
-        </div>
+        </footer>
     </form>
 </body>
 </html>
